Added TODO asciidoc

--- a/README.adoc
+++ b/README.adoc
@@ -112,3 +112,4 @@ This cannot be considered production ready. I viewed this as a story that would 
 further stories addressing issues such as authorization, as well as implementing the
 other endpoints.
 
+include::TODO.adoc[]
